git commit -m “alignment correction”

--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,22 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--blackbackground);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--white);
+}
+
+::-webkit-scrollbar-hover {
+  background: var(--darkgrey);
+}
+
 :root {
   --white: #fcfbf8;
   --pink: #E3442E;
@@ -23,7 +39,7 @@
 
 html, body {
   font-size: 16px;
-  padding-top: calc(12px + 1rem);
+  /* padding-top: calc(12px + 1rem); */
   background-color: var(--blackbackground);
   width: 100%;
   height: 100%;
@@ -32,13 +48,12 @@ html, body {
 }
 
 header {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
   width: 100%;
   max-width: 1224px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px 0px 0px;
-  background-color: var(--blackbackground);
+  padding: 5px 0 0;
 
   @media(width <=40em) {
     
@@ -47,14 +62,23 @@ header {
 }
 
 .header-wrapper {
-  position: fixed;
+  position: sticky;
   top: 0;
   z-index: 1000;
   width: 100%;
+  display: flex;
+  justify-content: center; 
   background-color: var(--blackbackground);
+  box-sizing: border-box;
+}
+
+.header-wrapper, 
+.footer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--blackbackground);
 }
 
 
@@ -95,7 +119,7 @@ header {
 
 .logo .logo-img {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   height: 12px;
 }
 
@@ -118,6 +142,7 @@ header {
     justify-content: flex-start;
     height: 36px;
     width: auto;
+    transform: translateY(1.2px);
   }
   .phone-logo {
     display: none;
@@ -176,6 +201,22 @@ header {
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+/* CONTENT ALIGNMENT */
+
+.content-container {
+  width: 100%;
+  max-width: 1224px;
+  margin: 0 auto;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.grid-container .grid-gallery .column .grid-container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 
 /* SAFARI */
 
@@ -253,12 +294,9 @@ header {
 .footer
 {
   position: fixed;
-  width: 100%;
    bottom: 0;
-   background-color: var(--blackbackground) !important;
-  display: flex;
   justify-content: center;
-  align-items: center;
+
   z-index: 1000;
 }
 
